Improving deployment scripts (#18)

--- a/.gitignore
+++ b/.gitignore
@@ -61,9 +61,10 @@ target/
 #Ipython Notebook
 .ipynb_checkpoints
 .idea
+package
 *~
 *.zip
-version.txt
+version.rb
 deploy/
 conf.yml
 Gemfile.lock
